--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
+body {
+  font-family: "Rubik" !important;
+}
+
 @theme inline {
+  /* Custom Theme */
+  --color-natural-0: #000000;
+  --color-natural-100: #ffffff;
+  --color-natural-80: #cccccc;
+  --color-primary-20: #4d0001;
+  --color-primary-30: #600c20;
+  --color-primary-40: #a61518;
+  --color-blue-50: #0073dd;
+
+  /* UI Lib Theme */
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -116,5 +131,32 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .body-medium-regular {
+    @apply text-natural-0 text-lg;
+  }
+  .body-medium-semibold {
+    @apply text-natural-0 text-lg font-semibold;
+  }
+  .body-medium-bold {
+    @apply text-natural-0 text-lg font-bold;
+  }
+  .heading-small-bold {
+    @apply text-natural-0 text-xl font-bold;
+  }
+  .heading-medium-bold {
+    @apply text-natural-0 text-2xl font-bold;
+  }
+  .title-small-regular {
+    @apply text-natural-0 text-3xl;
+  }
+  .title-small-bold {
+    @apply text-natural-0 text-3xl font-bold;
+  }
+  .title-large-semibold {
+    @apply text-natural-0 text-[34px] font-semibold;
   }
 }
